All Tasks: Prevention of auto-dark mode

--- a/tasks/go-no-go/style.css
+++ b/tasks/go-no-go/style.css
@@ -1,3 +1,7 @@
+:root {
+    color-scheme: only light;
+}
+
 #stim1 {
 	width: 15vw;
 	height: 15vw;
@@ -47,3 +51,4 @@
     -webkit-box-shadow: inset 0 0 40px #000000;
     box-shadow:         inset 0 0 40px #000000;
 }
+
