--- a/tasks/hearts-flowers/style.css
+++ b/tasks/hearts-flowers/style.css
@@ -1,4 +1,8 @@
-html, body { 
+:root {
+  color-scheme: only light;
+}
+
+html, body {
   background-color: white;
   color: black;
 }
